--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "lint": "eslint .",
     "start": "next start"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^9.1.4",
+    "antd": "^4.3.0",
+    "axios": "^0.20.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0"
   }
 }
