--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^9.1.4",
+    "@ant-design/icons": "4.3.0",
     "antd": "^4.3.0",
     "axios": "^0.20.0",
     "next": "10.0.1",
